syntax = "proto3";

package gedorinku.tsugidoko_server.type;

option go_package = "github.com/gedorinku/tsugidoko-server/api/type;type_pb";



import "type/tag.proto";

message TagCount {
  Tag tag = 1;
  int32 count = 2;
}
